RESOLVED FIXED87922
[Qt][WK2] Contents not rendered in MiniBrowser for some pages
https://bugs.webkit.org/show_bug.cgi?id=87922
Summary [Qt][WK2] Contents not rendered in MiniBrowser for some pages
Dinu Jacob
Reported 2012-05-30 20:54:56 PDT
Contents are not rendered in MiniBrowser for some pages like google.com though the page has been loaded successfully
Attachments
Patch (1.39 KB, patch)
2012-05-30 21:04 PDT, Dinu Jacob
no flags
Patch (2.66 KB, patch)
2012-05-31 10:59 PDT, Dinu Jacob
kenneth: review-
webkit.review.bot: commit-queue-
Archive of layout-test-results from ec2-cr-linux-04 (742.74 KB, application/zip)
2012-05-31 18:26 PDT, WebKit Review Bot
no flags
Patch (2.24 KB, patch)
2012-06-01 05:41 PDT, Dinu Jacob
kenneth: review+
Patch for landing (2.25 KB, patch)
2012-06-01 06:52 PDT, Dinu Jacob
no flags
Dinu Jacob
Comment 1 2012-05-30 21:02:21 PDT
For these pages the comparison between accurateVisibleRect and drawing area contentsRect in QQuickWebViewFlickablePrivate::_q_onInformVisibleContentChange is true. drawingArea->contentsRect is actually returning the contentsSize and this is set by the time we reach this slot. Thus the drawing area visible contents rect is not set correctly. For pages with contents height greater than the viewport bounding rect height, it gets set when the content size grows beyond the viewport bounding rect height.
Dinu Jacob
Comment 2 2012-05-30 21:04:27 PDT
Dinu Jacob
Comment 3 2012-05-31 10:59:15 PDT
Dinu Jacob
Comment 4 2012-05-31 11:00:23 PDT
Added a new patch that attempts to compare the actual visible contents rect of drawing area and the new value to determine early return in _q_onInformVisibleContentChange.
WebKit Review Bot
Comment 5 2012-05-31 18:26:40 PDT
Comment on attachment 145113 [details] Patch Attachment 145113 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/12872265 New failing tests: http/tests/media/media-source/video-media-source-event-attributes.html
WebKit Review Bot
Comment 6 2012-05-31 18:26:44 PDT
Created attachment 145189 [details] Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Kenneth Rohde Christiansen
Comment 7 2012-06-01 02:07:42 PDT
Comment on attachment 145113 [details] Patch Please redo then when I commit my other patch. This is all changed.
Dinu Jacob
Comment 8 2012-06-01 05:41:11 PDT
Andras Becsi
Comment 9 2012-06-01 05:44:32 PDT
Comment on attachment 145275 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=145275&action=review LGTM. > Source/WebKit2/UIProcess/qt/QtViewportInteractionEngine.cpp:696 > + if (m_lastVisibleContentsRect == visibleContentsRect()) > + return; > + Indentation.
Kenneth Rohde Christiansen
Comment 10 2012-06-01 05:48:26 PDT
Comment on attachment 145275 [details] Patch r=me with fixed indentation
Dinu Jacob
Comment 11 2012-06-01 06:52:15 PDT
Created attachment 145294 [details] Patch for landing
WebKit Review Bot
Comment 12 2012-06-01 08:21:37 PDT
Comment on attachment 145294 [details] Patch for landing Clearing flags on attachment: 145294 Committed r119231: <http://trac.webkit.org/changeset/119231>
Michael Brüning
Comment 13 2012-09-25 02:45:12 PDT
Should we close this bug? It seems all patches have landed and the issues are fixed.
Michael Brüning
Comment 14 2013-01-04 03:55:33 PST
This came up on the pending commit list sent around on Eric Seidel. The patch has landed and the issues have been fixed as far as I saw in a test, so I am closing this.
Note You need to log in before you can comment on or make changes to this bug.