[Qt][WK2] Contents not rendered in MiniBrowser for some pages https://bugs.webkit.org/show_bug.cgi?id=87922

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2012-06-01
Reviewed by Kenneth Rohde Christiansen.

Set drawing area visible contents rect if new visible contents rect is different from
the previous one.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::informVisibleContentChange):
* UIProcess/qt/QtViewportInteractionEngine.h:
(QtViewportInteractionEngine):

Canonical link: https://commits.webkit.org/105910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119231 268f45cc-cd09-0410-ab3c-d52691b4dbfc